--- a/views/names.ejs
+++ b/views/names.ejs
@@ -1,31 +1,20 @@
-<head>
-  <%- include('./partials/head'); %>
-</head>
-<header>
-  <%- include('./partials/header'); %>
-</header>
-<h1>List of Names</h1>
-
-<body class="container">
-<div align="right" class="d-grid col-12 mx-auto">
-<button
-  type="button"
-  class="btn btn-outline-primary btn-lg active"
->
-<i class="bi bi-person-fill-add"></i>
-</button>
-</div>
-<div class="row">
-  <div class="col">
-    <ol class="list-group list-group-numbered">
-      <% names.forEach(function (item) { %>
-        <%- include('./layouts/name', {listItemName: item}); %>
-      <%}); %>
-    </ol>
+<div class="container">
+  <h1><%- title %></h1>
+  <div class="d-grid col-12 mx-auto">
+  <button
+    type="button"
+    class="btn btn-outline-primary btn-lg active"
+  >
+  <i class="bi bi-person-fill-add"></i>
+  </button>
+  </div>
+  <div class="row">
+    <div class="col">
+      <ol class="list-group list-group-numbered">
+       <% names.forEach(function (name) { %>
+          <%- include('./partials/name', name); %>        
+       <%}); %>
+      </ol>
+    </div>
   </div>
 </div>
-<footer>
-  <%- include('./partials/footer'); %>
-</footer>
-
-</body>
