--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,3 @@
-<p class="text-center text-muted">&copy; Copyright 2022 MIT</p>
+<footer>
+<p class="text-center text-muted">&copy; Copyright 2022 Rivo-Car</p>
+</footer>
