--- a/views/partials/names.ejs
+++ b/views/partials/names.ejs
@@ -12,7 +12,7 @@
     <div class="col">
       <ol class="list-group list-group-numbered">
        <% names.forEach(function (name) { %>
-          <%- include('./partials/name', name); %>        
+          <%- include('name', name); %>        
        <%}); %>
       </ol>
     </div>
